package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
  name = "cpu_distributed_counter",
  srcs = ["CPUDistributedCounter.cpp"],
  hdrs = ["CPUDistributedCounter.h"],
  copts = ["-std=c++20"],
)

cc_test(
  name = "cpu_distributed_counter_test",
  srcs = ["CPUDistributedCounterTest.cpp"],
  deps = [ 
    ":cpu_distributed_counter",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = ["-std=c++20"],
)
