package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
  name = "hyper_shared_pointer",
  srcs = ["HyperSharedPointer.cpp"],
  hdrs = ["HyperSharedPointer.h"],
  deps = [
    "@com_google_glog//:glog",
  ],
  copts = ["-std=c++20"],
)

cc_test(
  name = "hyper_shared_pointer_test",
  srcs = ["HyperSharedPointerTest.cpp"],
  deps = [ 
    ":hyper_shared_pointer",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = ["-std=c++20"],
)

cc_binary(
  name = "hyper_shared_pointer_benchmark",
  srcs = ["HyperSharedPointerBenchmark.cpp"],
  deps = [
    ":hyper_shared_pointer",
    "@benchmark//:benchmark",
  ],
  copts = ["-std=c++20"],
)
